--- a/css/main.css
+++ b/css/main.css
@@ -3,19 +3,19 @@ body {
     padding-bottom: 40px;
     background-color: #eee;
 }
-.form-signin {
+.form-signup {
     max-width: 330px;
     padding: 15px;
     margin: 0 auto;
 }
-.form-signin .form-signin-heading,
-.form-signin .checkbox {
+.form-signup .form-signup-heading,
+.form-signup .checkbox {
     margin-bottom: 10px;
 }
-.form-signin .checkbox {
+.form-signup .checkbox {
     font-weight: normal;
 }
-.form-signin .form-control {
+.form-signup .form-control {
     position: relative;
     font-size: 16px;
     height: auto;
@@ -24,15 +24,15 @@ body {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
-.form-signin .form-control:focus {
+.form-signup .form-control:focus {
     z-index: 2;
 }
-.form-signin input[type="text"] {
+.form-signup input[type="text"] {
     margin-bottom: -1px;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
 }
-.form-signin input[type="password"] {
+.form-signup input[type="password"] {
     margin-bottom: 10px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
